# wgsextract-cli

./: .coderabbit.yaml  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  TODO.md  bootstrap_wsl.ps1  handoff.md  install.sh  install_windows.bat  pixi.toml  pyproject.toml  pytest.ini  run_vep.sh  sample.bam.wgse_info.json  setup_windows.ps1  uninstall.sh  uninstall_windows.bat  wgsextract
.agents/skills/ci-pr-autopilot/: SKILL.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: codeql.yml  copilot-setup-steps.yml  gitleaks.yml  macos_app_pr_ci.yml  macos_app_release.yml  macos_ci.yml  pages.yml  release_windows_bwa.yml  ubuntu_ci.yml  windows_ci.yml  windows_pacman_ci.yml  wsl_windows_ci.yml
.greptile/: config.json  rules.md
aidocs/: native-windows-optional-dependencies.md
dep_scripts/: install_arch.sh  install_fedora.sh  install_linux_conda.sh  install_macos.sh  install_macos_conda.sh  install_macos_hybrid.sh  install_ubuntu.sh  install_windows_conda.ps1  install_windows_wsl.ps1  uninstall_arch.sh  uninstall_fedora.sh  uninstall_linux_conda.sh  uninstall_macos.sh  uninstall_macos_conda.sh  uninstall_macos_hybrid.sh  uninstall_ubuntu.sh  uninstall_windows_conda.ps1  verify_tools.sh  verify_uninstalled.sh
docs/: TODO.md  advanced_benchmark_results.md  benchmark_compression_v2.py  index.html  site_generation.md  windows_pacman_runtime.md
packaging/macos/: README.md  app_env.sh  launch_gui.sh  open_cli.command
scratch/: wsl_generate_large_bam.py  wsl_tool_stress.py
scripts/: bootstrap_windows_prereqs.ps1  build_benchmark_dataset.py  build_macos_app.sh  build_site.py  clean_outputs.py  gen_map.py  generate_full_map.py  generate_perfect_bam.py  package_smoke.py  project_stats.py  project_stats.sh  run_actionlint.py  setup_pacman_runtime.ps1  setup_vcf_resources.sh  test_install_sh.sh  validate_github_actions.py  validate_site_sources.py  verify_tools.sh  verify_uninstalled.sh
site/: .nojekyll  cli.html  gui.html  index.html  install.html  reference.html  wgs-guide.html  workflows.html
site/assets/: site.css
site_src/: abbr.toml  cli.md  gui.md  index.md  install.md  reference.md  wgs-guide.md  workflows.md
smoke_test_scripts/: benchmark_haplogrep.sh  benchmark_lineage.sh  benchmark_lineage_vcf.sh  benchmark_yleaf.sh  common.sh  reproduce_windows_ci.ps1  run_all_smoke_tests.sh  run_comprehensive_smoke_tests.sh  run_vep.sh  test_align_basics.sh  test_bam_basics.sh  test_benchmark_lineage_vcf.sh  test_benchmark_yleaf.sh  test_cram_microarray.sh  test_deps_check.sh  test_extract_basics.sh  test_info_coverage.sh  test_lineage_basics.sh  test_microarray_basics.sh  test_misc_basics.sh  test_perf_boost.sh  test_pet_basics.sh  test_qc_fake_data.sh  test_ref_basics.sh  test_ref_library_basics.sh  test_repair_basics.sh  test_vcf_annotate.sh  test_vcf_chain_annotate.sh  test_vcf_clinvar.sh  test_vcf_cnv.sh  test_vcf_deepvariant.sh  test_vcf_filter.sh  test_vcf_freebayes.sh  test_vcf_gatk.sh  test_vcf_gnomad.sh  test_vcf_indel.sh  test_vcf_microarray.sh  test_vcf_pathogenicity_new.sh  test_vcf_phylop.sh  test_vcf_real_ref_db.sh  (+5 more)
smoke_test_scripts/basics/: test_align_basics.sh  test_bam_advanced.sh  test_bam_basics.sh  test_build_detection_robustness.sh  test_cleanup.sh  test_deps_check.sh  test_expert_scenarios.sh  test_extract_advanced.sh  test_extract_basics.sh  test_info_coverage.sh  test_integrity_polish.sh  test_lineage_basics.sh  test_microarray_basics.sh  test_misc_basics.sh  test_mixed_chrom_naming.sh  test_perf_boost.sh  test_pet_basics.sh  test_pixi_fallback.sh  test_qc_fake_data.sh  test_ref_basics.sh  test_ref_databases.sh  test_ref_download_index.sh  test_ref_library_basics.sh  test_repair_basics.sh  test_robustness_ux.sh  test_run_vep.sh  test_special_paths.sh  test_stress_scenarios.sh  test_vep_basics.sh  test_vep_full.sh  test_web_gui_basics.sh
smoke_test_scripts/benchmarks/: test_benchmark_haplogrep.sh  test_benchmark_lineage.sh  test_benchmark_lineage_vcf.sh  test_benchmark_yleaf.sh
smoke_test_scripts/real_data/: test_align_full.sh  test_cram_microarray.sh  test_lineage_full.sh  test_low_coverage_microarray.sh  test_mito_ydna_full.sh  test_pet_align_full.sh  test_ref_robustness_full.sh  test_vcf_calling_full.sh  test_vcf_clinical_full.sh  test_vcf_microarray.sh  test_vcf_real_ref_db.sh  test_vcf_sv_cnv_full.sh  test_vcf_trio_real.sh  test_vcf_vep.sh
smoke_test_scripts/vcf/: test_vcf_annotate.sh  test_vcf_chain_annotate.sh  test_vcf_clinvar.sh  test_vcf_cnv.sh  test_vcf_deepvariant.sh  test_vcf_filter.sh  test_vcf_freebayes.sh  test_vcf_gatk.sh  test_vcf_gnomad.sh  test_vcf_indel.sh  test_vcf_pathogenicity_new.sh  test_vcf_phylop.sh  test_vcf_real_ref_db.sh  test_vcf_revel.sh  test_vcf_snp.sh  test_vcf_sv.sh  test_vcf_trio.sh  test_vcf_trio_inheritance.sh  test_vcf_trio_real.sh  test_vcf_vep.sh
src/wgsextract_cli/: main.py
src/wgsextract_cli/cli/: __init__.py  bootstrap.py  dispatch.py  parser.py
src/wgsextract_cli/commands/: _analyze_workflows.py  _benchmark_core.py  _benchmark_datasets.py  align.py  (+53 more)
tests/: conftest.py  dummy_main.py  e2e_base.py  smoke_utils.py  test_analyze_batch.py  test_analyze_comprehensive.py  test_benchmark.py  test_cli_suite.py  test_commands_integration.py  test_dev_download_cache.py  test_download_progress.py  test_e2e.py  test_e2e_fast_chrM.py  test_e2e_full_genome.py  test_fast_fake_bam.py  test_graceful_exit.py  test_info.py  test_logic.py  test_microarray_accuracy.py  test_microarray_pr43_regressions.py  test_microarray_real_data.py  test_microarray_translation.py  test_optional_deps.py  test_parent_monitor.py  test_path_and_registry_regressions.py  test_ref_bootstrap_config.py  test_ref_library_digest.py  test_ref_status.py  test_repair_file_mode.py  test_review_regressions.py  test_robustness.py  test_signal_descriptions.py  test_smoke.py  test_smoke_real_basics.py  test_smoke_real_expert.py  test_smoke_real_full.py  test_smoke_real_pet.py  test_smoke_real_ref.py  test_smoke_real_vcf.py  test_smoke_real_vcf_ann.py  (+10 more)
(+98 files in other folders)
