[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wgsextract-cli"
version = "0.1.0"
description = "A modern, standalone Command-Line Interface for WGS Extract."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [
    { name = "WGS Extract Contributors" }
]
dependencies = [
    "python-dotenv", # Loads environment variables (e.g., WGSE_REF) from .env files
    "pyliftover",    # Performs hg38 to hg19 coordinate liftover for microarray simulations
    "psutil",        # Detects system RAM/CPU for automatic resource tuning (e.g., samtools memory)
    "customtkinter", # Modern GUI framework
    "Pillow",        # Image processing (needed by customtkinter)
    # Unused dependencies (currently delegated to external binaries or not yet implemented):
    # "wakepy",    # Intended to prevent system sleep during long operations (not yet implemented in CLI)
    # "pandas",    # Data analysis/manipulation (CLI currently uses awk and subprocess)
    # "numpy",     # Numerical calculations (CLI currently uses awk and subprocess)
    # "biopython", # Bioinformatic file parsing (CLI delegates to samtools/bcftools)
    # "pyfaidx",   # Efficient FASTA indexing/access (CLI delegates to samtools)
    # "openpyxl",  # Excel file support (used by GUI for language.xlsx; not needed by CLI)
    # "requests",  # HTTP library (CLI currently uses wget via subprocess)
    # "urllib3"    # HTTP client (CLI currently uses wget via subprocess)
]

[project.scripts]
wgsextract-cli = "wgsextract_cli.main:main"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"] # Ignore long lines; common in bioinfo CLI tools

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
files = "src/wgsextract_cli"

[tool.hatch.build.targets.wheel]
packages = ["src/wgsextract_cli"]
