[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wgsextract-cli"
version = "0.1.0"
description = "A modern, standalone Command-Line Interface for WGS Extract."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{ name = "WGS Extract Contributors" }]
dependencies = [
    "pyliftover",    # Performs hg38 to hg19 coordinate liftover for microarray simulations
    "psutil",        # Detects system RAM/CPU for automatic resource tuning (e.g., samtools memory)
    "customtkinter", # Modern GUI framework
    "Pillow",        # Image processing (needed by customtkinter)
    "nicegui",       # Web-based GUI framework
    "platformdirs",  # For cross-platform configuration directories
    "tomli; python_version < '3.11'", # TOML parser for Python < 3.11
    "tomli-w",       # TOML writer
]

[project.scripts]
wgsextract = "wgsextract_cli.main:main"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "playwright",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "selenium>=4.41.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",
    "E402",
    "F841",
    "E741",
    "E722",
    "F403",
    "F821",
    "F401",
] # Ignore long lines and legacy code issues

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
files = "src/wgsextract_cli"

[tool.hatch.build.targets.wheel]
packages = ["src/wgsextract_cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = [".", "src", "tests"]
testpaths = ["tests"]
